--- a/jsmol.html
+++ b/jsmol.html
@@ -12,6 +12,11 @@
 
 	<script type="text/javascript">
 		
+		userOptions = {
+			width:  900,
+			height: 600,
+		}
+		
 		// path to file you want to load
 		// molFile = "./molvis-tools/jsmol/data/caffeine.mol"
 		molFile = "./current"
@@ -30,8 +35,8 @@
 		}		
 
 		var Info = {
-			width: 800,
-			height:800,
+			width: userOptions.width  * 2/3,
+			height:userOptions.height * 1,
 			debug: false,
 			color: "0xE0D0C0", //solarized, replace with 0x888888 for neutral gray
 			addSelectionOptions: false, // creates search console
@@ -71,18 +76,18 @@
 				$('#jmolApplet0_console_buttondiv').remove();
 				$('#jmolApplet0_console_inputdiv').prependTo('#jmolApplet0_console');
 				$('#jmolApplet0_console_output').css({
-					'height' : "600px",
-					'width' : "400px",
+					'height' : 3/4 * userOptions.height + "px",
+					'width' :  1/3 * userOptions.width +  "px",
 					'background-color' : "gray",
 					'font-family': "Menlo, monospace",
-					'font-size': "0.7em",
+					'font-size': userOptions.width / 100 + "px",
 				});
 				$('#jmolApplet0_console_input').css({
-					'height' : "200px",
-					'width' : "400px",
+					'height' : 1/4 * userOptions.height + "px",
+					'width' :  1/3 * userOptions.width  + "px",
 					'background-color' : "#AA8866",
 					'font-family': "Menlo, monospace",
-					'font-size': "1.2em",
+					'font-size': userOptions.height / 40 + "px",
 					'color' : "#333333",
 				});
    			}, 200);
